--- a/ui/client-react/src/components/builder/formBuilderContainer.scss
+++ b/ui/client-react/src/components/builder/formBuilderContainer.scss
@@ -7,9 +7,13 @@
     min-width: 100%;
     overflow: auto;
 
-    .loadedContent {
+    .formBuilderContent {
+        flex: 1 auto;
+        max-height: 100%;
         overflow: auto;
-        padding-bottom: 65px;
-        width: 100%;
+    }
+
+    .formContainer {
+        padding-bottom: 70px;
     }
 }
